# cmake-qt-packaging-example

./: CMakeLists.txt  CPackLinuxDeployQt.cmake.in  CPackMacDeployQt.cmake.in  LICENSE  Packaging.cmake  README.md  azure-pipelines.yml
.github/workflows/: ci-linux.yml
resources/: example.desktop
